kubernetes/api-document-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-document-deployment
  namespace: graphql-grpc-ns
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-document
  template:
    metadata:
      labels:
        app: api-document
    spec:
      containers:
        - name: api-document
          image: amitsingh00/document-service:latest
          ports:
          - containerPort: 9090
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: document-service
  namespace: graphql-grpc-ns
spec:
  ports:
  - port: 9090
    targetPort: 9090
    name: tcp
  selector:
    app: api-document
