kubernetes/api-graphql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-graphql-deployment
  namespace: graphql-grpc-ns
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-graphql
  template:
    metadata:
      labels:
        app: api-graphql
    spec:
      containers:
        - name: api-graphql
          image: amitsingh00/api-graphql:latest
          ports:
          - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-service
  namespace: graphql-grpc-ns
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: api-graphql
